@@ -36,7 +36,7 @@ MODULE readin
 !*     Université de Lille, Sciences et Technologies                              *
 !*     UMR CNRS 8207, UMET - C6, F-59655 Villeneuve D'Ascq, France                *
 !*     pierre.hirel@univ-lille.fr                                                 *
-!* Last modification: P. Hirel - 10 July 2019                                     *
+!* Last modification: P. Hirel - 28 May 2021                                      *
 !**********************************************************************************
 !* This program is free software: you can redistribute it and/or modify           *
 !* it under the terms of the GNU General Public License as published by           *
@@ -225,6 +225,9 @@ CASE('xyz')
 CASE('pwo')
   !These files can only be read with the mode "--one-in-all"
   CALL ATOMSK_MSG(1814,(/"PWscf output","--one-in-all"/),(/0.d0/))
+CASE('vout')
+  !These files can only be read with the mode "--one-in-all"
+  CALL ATOMSK_MSG(1814,(/"VASP OUTCAR ","--one-in-all"/),(/0.d0/))
 !
 !
 CASE DEFAULT
